fix home page main feed item alignment for safari

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -42,6 +42,7 @@ body {
 
   .main-feed-item {
     overflow: hidden;
+    vertical-align: top;
     width: 160px;
   }
 
